fix bug, add Soup show

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
 
 
 <ul>
-<%= @category.soups.each do |soup| %>
+<% @category.soups.each do |soup| %>
 <li> 
 	<%= link_to soup.name , soup %> 
 </li>
