--- a/app/views/soups/show.html.erb
+++ b/app/views/soups/show.html.erb
@@ -7,3 +7,7 @@
 <% else %>
 	<p>sucks</p>
 <% end %>
+
+<% if params[:admin]== "true" %>
+<p> <%= link_to "Toggle_featured", toggle_featured_path(@soup) %> </p>
+<% end %>
